force-app/main/default/objects/Expectation_Exchange__c/Expectation_Exchange__c.object-meta.xml
<CustomObject>
    <label>Expectation Exchange</label>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Expectation Exchange Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expectation Exchanges</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>