force-app/main/default/objects/Expectation_Exchange__c/fields/Date_of_Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Annual_Review__c</fullName>
    <inlineHelpText>Enter the date of your next Annual Review with your line manager</inlineHelpText>
    <label>Date of Annual Review</label>
    <type>Date</type>
</CustomField>