force-app/main/default/objects/Expectation_Exchange__c/fields/Date_of_Objective_Settings__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Objective_Settings__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>Enter the date on which you have set your objectives with your line manager</inlineHelpText>
    <label>Date of Objective Settings</label>
    <type>Date</type>
</CustomField>