force-app/main/default/objects/Expectation_Exchange__c/fields/Half_Year_Review_Reviewer_Comments__c.field-meta.xml
<CustomField>
    <fullName>Half_Year_Review_Reviewer_Comments__c</fullName>
    <description>Completed by the line manager during or after the half-year review with the individual, a short commentary on progress. 

Any changes to the annual objectives (additions, removals, changes to measures or timing) agreed at the 6-month review should be signed-off by the line manager here.

Specific actions agreed in the half-year review may be documented here</description>
    <inlineHelpText>Completed by the line manager during or after the half-year review with the individual, a short commentary on progress.</inlineHelpText>
    <label>Half-Year Review - Reviewer Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>