force-app/main/default/objects/Expectation_Exchange__c/fields/Line_Manager__c.field-meta.xml
<CustomField>
    <fullName>Line_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expectation_Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>