force-app/main/default/objects/Expectation_Exchange__c/fields/Organisation_Level__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Level__c</fullName>
    <label>Organisation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Organisation_Levels</valueSetName>
    </valueSet>
</CustomField>