force-app/main/default/objects/Expectation_Exchange__c/validationRules/Line_Manager_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Manager_must_be_set</fullName>
    <active>true</active>
    <description>Prevents creation of a record if the Line Manager has not been set.</description>
    <errorConditionFormula>ISBLANK( Line_Manager__c )</errorConditionFormula>
    <errorDisplayField>Line_Manager__c</errorDisplayField>
    <errorMessage>You must specify your Line Manager</errorMessage>
</ValidationRule>